# source-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
appframework/: AppSystemGroup.cpp  CMakeLists.txt  VguiMatSysApp.cpp  WinApp.cpp  appframework.vpc  glmdisplaydb_linuxwin.inl  glmrendererinfo_osx.mm  posixapp.cpp  sdlmgr.cpp
bitmap/: CMakeLists.txt  ImageByteSwap.cpp  bitmap.cpp  bitmap.vpc  colorconversion.cpp  float_bm.cpp  float_bm2.cpp  float_bm3.cpp  float_bm4.cpp  float_bm_bilateral_filter.cpp  float_cube.cpp  imageformat.cpp  psd.cpp  resample.cpp  tgaloader.cpp  tgawriter.cpp
choreoobjects/: CMakeLists.txt  choreoobjects.vpc
datacache/: CMakeLists.txt  datacache.cpp  datacache.h  datacache_common.h  mdlcache.cpp
datamodel/: CMakeLists.txt  DmElementFramework.cpp  DmElementFramework.h  clipboardmanager.cpp  clipboardmanager.h  datamodel.cpp  datamodel.h  datamodel.vpc  dependencygraph.cpp  dependencygraph.h  dmattribute.cpp  dmattributeinternal.h  dmelement.cpp  dmelementdictionary.cpp  dmelementdictionary.h  dmelementfactoryhelper.cpp  dmserializerbinary.cpp  dmserializerkeyvalues.cpp  dmserializerkeyvalues.h  dmserializerkeyvalues2.cpp  dmserializerkeyvalues2.h  undomanager.cpp  undomanager.h
dedicated/: CMakeLists.txt  dedicated.h  dedicated.rc  dedicated.vpc  filesystem.cpp  isys.h  resource.h  sys_common.cpp  sys_ded.cpp  sys_linux.cpp  sys_windows.cpp
dedicated_main/: CMakeLists.txt  dedicated_main.rc  dedicated_main.vpc  main.cpp  resource.h
dmserializers/: CMakeLists.txt  dmebaseimporter.cpp  dmebaseimporter.h  dmserializers.cpp  dmserializers.h  dmserializers.vpc  importactbusy.cpp  importkeyvaluebase.cpp  importkeyvaluebase.h  importsfmv1.cpp  importsfmv2.cpp  importsfmv3.cpp  importsfmv4.cpp  importsfmv5.cpp  importsfmv6.cpp  importsfmv7.cpp  importsfmv8.cpp  importsfmv9.cpp  importvmf.cpp  importvmt.cpp
engine/: CMakeLists.txt  DevShotGenerator.cpp  DevShotGenerator.h  DownloadListGenerator.cpp  DownloadListGenerator.h  EngineSoundClient.cpp  EngineSoundInternal.h  EngineSoundServer.cpp  GameEventManager.cpp  GameEventManager.h  GameEventManagerOld.cpp  IOcclusionSystem.h  LoadScreenUpdate.cpp  LoadScreenUpdate.h  LocalNetworkBackdoor.cpp  LocalNetworkBackdoor.h  MapReslistGenerator.cpp  MapReslistGenerator.h  MaterialBuckets.h  ModelInfo.cpp  ModelInfo.h  NetworkStringTableItem.cpp  OcclusionSystem.cpp  Overlay.cpp  Overlay.h  SVConnectionlessHandler.h  Session.cpp  Session.h  baseautocompletefilelist.cpp  baseautocompletefilelist.h  baseclient.cpp  baseclient.h  baseclientstate.cpp  baseclientstate.h  baseserver.cpp  baseserver.h  bitbuf_errorhandler.cpp  bitbuf_errorhandler.h  bugreporter.cpp  buildcubemaps.cpp  (+397 more)
filesystem/: CMakeLists.txt  QueuedLoader.cpp  basefilesystem.cpp  basefilesystem.h  filesystem_async.cpp  filesystem_stdio.cpp  filesystem_stdio.vpc  filesystem_steam.cpp  filesystem_steam.vpc  filetracker.cpp  filetracker.h  linux_support.cpp  linux_support.h  packfile.cpp  packfile.h  threadsaferefcountedobject.h
gameui/: BackgroundMenuButton.cpp  BackgroundMenuButton.h  BasePanel.cpp  BasePanel.h  BaseSaveGameDialog.cpp  BaseSaveGameDialog.h  BenchmarkDialog.cpp  BenchmarkDialog.h  BitmapImagePanel.cpp  BitmapImagePanel.h  BonusMapsDatabase.cpp  BonusMapsDatabase.h  BonusMapsDialog.cpp  BonusMapsDialog.h  CDKeyEntryDialog.cpp  CDKeyEntryDialog.h  CMakeLists.txt  ChangeGameDialog.cpp  ChangeGameDialog.h  CommandCheckButton.cpp  CommandCheckButton.h  CommentaryDialog.cpp  CommentaryDialog.h  CommentaryExplanationDialog.cpp  CommentaryExplanationDialog.h  ContentControlDialog.cpp  ContentControlDialog.h  ControllerDialog.cpp  ControllerDialog.h  CreateMultiplayerGameBotPage.cpp  CreateMultiplayerGameBotPage.h  CreateMultiplayerGameDialog.cpp  CreateMultiplayerGameDialog.h  CreateMultiplayerGameGameplayPage.cpp  CreateMultiplayerGameGameplayPage.h  CreateMultiplayerGameServerPage.cpp  CreateMultiplayerGameServerPage.h  CustomTabExplanationDialog.cpp  CustomTabExplanationDialog.h  CvarNegateCheckButton.cpp  (+85 more)
hammer/: AnchorMgr.cpp  AnchorMgr.h  CMakeLists.txt  DispShore.cpp  DispShore.h  FileChangeWatcher.cpp  FileChangeWatcher.h  FilteredComboBox.cpp  FilteredComboBox.h  HammerScene.cpp  HammerScene.h  HammerVGui.cpp  HammerVGui.h  MapAxisHandle.cpp  MapAxisHandle.h  MapDiffDlg.cpp  MapDiffDlg.h  MapHelper.h  ModelBrowser.cpp  ModelBrowser.h  NewVisGroupDlg.cpp  NewVisGroupDlg.h  OP_Model.cpp  OP_Model.h  ObjectPage.cpp  PopupMenus.h  Render.cpp  Render.h  RenderUtils.cpp  RenderUtils.h  ScenePreviewDlg.cpp  ScenePreviewDlg.h  SearchReplaceDlg.cpp  SearchReplaceDlg.h  SelectModeDlgBar.h  Selection.cpp  Selection.h  SmoothingGroupMgr.cpp  SmoothingGroupMgr.h  SoundBrowser.cpp  (+418 more)
inputsystem/: CMakeLists.txt  inputsystem.cpp  inputsystem.h  inputsystem.vpc  joystick_sdl.cpp  key_translation.cpp  key_translation.h  novint.cpp  posix_stubs.h  steamcontroller.cpp
launcher/: CMakeLists.txt  ifilesystem.h  launcher.cpp  launcher.vpc  reslistgenerator.cpp  reslistgenerator.h
launcher_main/: CMakeLists.txt  launcher_main.rc  launcher_main.vpc  main.cpp  resource.h
materialsystem/: CColorCorrection.cpp  CMakeLists.txt  CMaterialSubRect.cpp  IHardwareConfigInternal.h  IShaderSystem.h  MaterialSystem.rc  Resource.rc  checkmaterials.cpp  cmaterial.cpp  cmaterial_queuefriendly.cpp  cmaterial_queuefriendly.h  cmaterialdict.cpp  cmaterialdict.h  cmaterialsystem.cpp  cmaterialsystem.h  cmaterialvar.cpp  cmatlightmaps.cpp  cmatlightmaps.h  cmatnullrendercontext.cpp  cmatnullrendercontext.h  cmatqueuedrendercontext.cpp  cmatqueuedrendercontext.h  cmatrendercontext.cpp  cmatrendercontext.h  colorspace.cpp  colorspace.h  ctexture.cpp  ctexturecompositor.cpp  ctexturecompositor.h  genshadermacro.pl  imagepacker.cpp  imagepacker.h  imaterialinternal.h  imaterialsysteminternal.h  imatrendercontextinternal.h  imorphinternal.h  itextureinternal.h  mat_stub.cpp  materialsystem.vpc  materialsystem_global.cpp  (+13 more)
mathlib/: 3dnow.cpp  3dnow.h  CMakeLists.txt  IceKey.cpp  almostequal.cpp  anorms.cpp  bumpvects.cpp  color_conversion.cpp  sse.cpp  (+19 more)
(+10523 files in other folders)
