set(PROJECT hammer)

set(SOURCES
    stdafx.cpp
    ${SRCDIR}/public/bone_setup.cpp
	${SRCDIR}/public/builddisp.cpp
	buildnum.cpp
	camera.cpp
	${SRCDIR}/public/chunkfile.cpp
	${SRCDIR}/public/collisionutils.cpp
	${SRCDIR}/common/ConfigManager.cpp
	${SRCDIR}/common/SourceAppInfo.cpp
	${SRCDIR}/public/disp_common.cpp
	${SRCDIR}/public/disp_powerinfo.cpp
	${SRCDIR}/public/filesystem_helpers.cpp
	${SRCDIR}/public/filesystem_init.cpp
	hammer_mathlib.cpp
	${SRCDIR}/public/keyframe/keyframe.cpp
	${SRCDIR}/public/rope_physics.cpp
	saveinfo.cpp
	${SRCDIR}/public/simple_physics.cpp
	${SRCDIR}/public/studio.cpp
	${SRCDIR}/public/vgui_controls/vgui_controls.cpp
	viewersettings.cpp

    ${SRCDIR}/public/tier0/afxmem_override.cpp
    AnchorMgr.cpp
    anglebox.cpp
    autoselcombo.cpp
    axes2.cpp
    boundbox.cpp
    brushops.cpp
    bsplighting.cpp
    bsplightingthread.cpp
    childfrm.cpp
    clipcode.cpp
    clock.cpp
    createarch.cpp
    culltreenode.cpp
    detailobjects.cpp
    dispmanager.cpp
    dispmapimagefilter.cpp
    disppaint.cpp
    dispsew.cpp
    DispShore.cpp
    dispsubdiv.cpp
    dynamicdialogwnd.cpp
    editgameclass.cpp
    editgameconfigs.cpp
    entityconnection.cpp
    events.cpp
    FileChangeWatcher.cpp
    FilteredComboBox.cpp
    gameconfig.cpp
    gamepalette.cpp
    gizmo.cpp
    grouplist.cpp
    hammer.cpp
    hammer.rc
    HammerScene.cpp
    HammerVGui.cpp
    helperfactory.cpp
    history.cpp
    iconcombobox.cpp
    ${SRCDIR}/public/interpolatortypes.cpp
    keyboard.cpp
    listboxex.cpp
    loadsave_map.cpp
    loadsave_rmf.cpp
    lpreview_thread.cpp
    lprvwindow.cpp
    mainfrm.cpp
    makeprefablibrary.cpp
    manifest.cpp
    manifestdialog.cpp
    mapdoc.cpp
    mappath.cpp
    mapview.cpp
    mapview2d.cpp
    mapview2dbase.cpp
    mapview3d.cpp
    mapviewlogical.cpp
    materialproxyfactory_wc.cpp
    mdiclientwnd.cpp
    messagewnd.cpp
    misc.cpp
    ModelBrowser.cpp
    noise.cpp
    objectbar.cpp
    options.cpp
    osver.cpp
    prefab3d.cpp
    prefabs.cpp
    processwnd.cpp
    Render.cpp
    render2d.cpp
    render3dms.cpp
    RenderUtils.cpp
    richeditctrlex.cpp
    runcommands.cpp
    runmap.cpp
    ScenePreviewDlg.cpp
    Selection.cpp
    SoundBrowser.cpp
    soundsystem.cpp
    splash.cpp
    sprite.cpp
    ssolid.cpp
    ${SRCDIR}/utils/common/scriplib.cpp

    stocksolids.cpp
    studiomodel.cpp
    targetnamecombo.cpp
    texturebox.cpp
    textureconverter.cpp
    texturewindow.cpp
    titlewnd.cpp
    VGuiWnd.cpp
    visgroup.cpp
	mapalignedbox.cpp
	mapanimator.cpp
	MapAxisHandle.cpp
	mapclass.cpp
	mapcylinder.cpp
	mapdecal.cpp
	mapdisp.cpp
	mapentity.cpp
	mapface.cpp
	mapfrustum.cpp
	mapgroup.cpp
	maphelper.cpp
	mapinstance.cpp
	mapkeyframe.cpp
	maplight.cpp
	maplightcone.cpp
	mapline.cpp
	mapoverlay.cpp
	mapoverlaytrans.cpp
	mapplayerhullhandle.cpp
	mappoint.cpp
	mappointhandle.cpp
	mapquadbounds.cpp
	mapsidelist.cpp
	mapsolid.cpp
	mapsphere.cpp
	mapsprite.cpp
	mapstudiomodel.cpp
	mapsweptplayerhull.cpp
	mapworld.cpp

	box3d.cpp
	tool3d.cpp
	ToolAxisHandle.cpp
	ToolBase.cpp
	ToolBlock.cpp
	ToolCamera.cpp
	ToolClipper.cpp
	ToolCordon.cpp
	ToolDecal.cpp
	tooldisplace.cpp
	ToolEntity.cpp
	ToolMagnify.cpp
	ToolManager.cpp
	ToolMaterial.cpp
	ToolMorph.cpp
	ToolOverlay.cpp
	ToolPickAngles.cpp
	ToolPickEntity.cpp
	toolpickface.cpp
	ToolPointHandle.cpp
	ToolSelection.cpp
	ToolSphere.cpp
	toolswepthull.cpp

	dummytexture.cpp
	material.cpp
	texture.cpp
	texturesystem.cpp
	wadtexture.cpp

	shell.cpp
	shellmessagewnd.cpp

	archdlg.cpp
	dispdlg.cpp
	editgroups.cpp
	editpathdlg.cpp
	editpathnodedlg.cpp
	editprefabdlg.cpp
	entityhelpdlg.cpp
	entityreportdlg.cpp
	faceedit_disppage.cpp
	faceedit_materialpage.cpp
	faceeditsheet.cpp
	filtercontrol.cpp
	gotobrushdlg.cpp
	hammerbar.cpp
	mapanimationdlg.cpp
	mapcheckdlg.cpp
	MapDiffDlg.cpp
	maperrorsdlg.cpp
	mapinfodlg.cpp
	materialdlg.cpp
	newdoctype.cpp
	newkeyvalue.cpp
	NewVisGroupDlg.cpp
	objectproperties.cpp
	ObjectPage.cpp
	op_entity.cpp
	op_flags.cpp
	op_groups.cpp
	op_input.cpp
	OP_Model.cpp
	op_output.cpp
	optbuild.cpp
	optconfigs.cpp
	optgeneral.cpp
	optionproperties.cpp
	opttextures.cpp
	optview2d.cpp
	optview3d.cpp
	pastespecialdlg.cpp
	prefabsdlg.cpp
	progdlg.cpp
	replacetexdlg.cpp
	runmapcfgdlg.cpp
	runmapexpertdlg.cpp
	scaleverticesdlg.cpp
	sculptoptions.cpp
	SearchReplaceDlg.cpp
	selectentitydlg.cpp
	selectmodedlgbar.cpp
	strdlg.cpp
	texturebar.cpp
	texturebrowser.cpp
	TorusDlg.cpp
	transformdlg.cpp

    ${SRCDIR}/public/tier0/memoverride.cpp
)

add_library(${PROJECT} SHARED ${SOURCES})
target_compile_definitions(${PROJECT} PRIVATE NO_MEMOVERRIDE_NEW_DELETE VALVE PROTECTED_THINGS_DISABLE VERSION_SAFE_STEAM_API_INTERFACES NO_WARN_MBCS_MFC_DEPRECATION)

target_link_libraries(${PROJECT} PRIVATE
    appframework
    tier0 tier1 tier2
    vstdlib
    mathlib
)